--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,13 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
 	implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
 	
-	
+	// https://mvnrepository.com/artifact/org.postgresql/postgresql/42.1.4
+	implementation 'org.postgresql:postgresql:42.1.4'
+
+	// log4j	
+    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+	implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+
 	// https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
 	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
 }
