--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="5.0">
-  <display-name>Servlet</display-name>
+  <display-name>Student</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.jsp</welcome-file>
@@ -11,32 +11,8 @@
   </welcome-file-list>
   <servlet>
     <description></description>
-    <display-name>Servlet</display-name>
-    <servlet-name>Servlet</servlet-name>
+    <display-name>student</display-name>
+    <servlet-name>student</servlet-name>
     <servlet-class>com.servlet.Servlet</servlet-class>
   </servlet>
-  <servlet-mapping>
-    <servlet-name>Servlet</servlet-name>
-    <url-pattern>/Servlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>HttpServlet</display-name>
-    <servlet-name>HttpServlet</servlet-name>
-    <servlet-class>com.servlet.example.Servlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>HttpServlet</servlet-name>
-    <url-pattern>/HttpServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>Servlet2</display-name>
-    <servlet-name>Servlet2</servlet-name>
-    <servlet-class>com.http.servlet.Servlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Servlet2</servlet-name>
-    <url-pattern>/Servlet2</url-pattern>
-  </servlet-mapping>
 </web-app>
